--- a/app/src/main/res/layout-large/login_activity.xml
+++ b/app/src/main/res/layout-large/login_activity.xml
@@ -123,6 +123,7 @@
             android:textStyle="bold"
             android:textSize="15dp"
             android:textColor="#4682B4"
+            android:buttonTint="@color/colorAccent"
             android:layout_gravity="center_vertical|right"
             android:text="Remember Me !"
             />
