--- a/app/src/main/res/layout-large/parent_dashboard.xml
+++ b/app/src/main/res/layout-large/parent_dashboard.xml
@@ -89,7 +89,7 @@
         android:orientation="vertical"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_margin="3dp"
+        android:layout_marginLeft="10dp"
         android:layout_gravity="bottom"
         android:gravity="center"
         android:layout_height="fill_parent">
