--- a/app/src/main/res/layout-normal/forgotpwd_mwordpassword.xml
+++ b/app/src/main/res/layout-normal/forgotpwd_mwordpassword.xml
@@ -45,6 +45,7 @@
         android:paddingLeft="10dp"
         android:textColor="#000000"
         android:textColorHint="#c0c0c0"
+        android:enabled="false"
         android:layout_above="@+id/btnLogin"
         android:textSize="16sp"
         android:layout_alignParentLeft="true"
