--- a/app/src/main/res/layout-large/parent_dashboard.xml
+++ b/app/src/main/res/layout-large/parent_dashboard.xml
@@ -38,19 +38,18 @@
             android:orientation="vertical">
 
             <realizer.com.schoolgenieparent.view.RoundedImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:visibility="visible"
                 android:id="@+id/iv_uImage" />
 
-            <TextView android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center_vertical"
+            <TextView android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
                 android:textColor="@color/black"
                 android:textSize="18dp"
                 android:gravity="center"
-                android:layout_marginTop="10dp"
                 android:visibility="gone"
                 android:background="@drawable/profilepic_circle"
                 android:id="@+id/img_user_text_image" />
@@ -61,7 +60,8 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal|bottom"
                 android:id="@+id/txtuName"
-                android:textColor="#696969"
+                android:textColor="#808080"
+                android:textStyle="normal"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:layout_marginBottom="0dp"
                 android:text=""
@@ -74,14 +74,15 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal|bottom"
                 android:id="@+id/txtStdDiv"
-                android:textColor="#696969"
+                android:textStyle="normal"
+                android:textColor="#808080"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:layout_marginBottom="0dp"
                 android:text=""
-                android:layout_marginTop="10dp"
                 android:textSize="18sp"/>
 
         </LinearLayout>
+
 
     </LinearLayout>
 
@@ -89,7 +90,7 @@
         android:orientation="vertical"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
+        android:layout_margin="3dp"
         android:layout_gravity="bottom"
         android:gravity="center"
         android:layout_height="fill_parent">
@@ -118,97 +119,110 @@
                         android:orientation="horizontal">
 
                         <Button
-                            style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
                             android:id="@+id/txtpdashinviteother"
-                            android:background="#ffffff"
+                            android:textSize="18sp"
+                            android:background="@color/white"
+                            android:textColor="@color/colorAccent"
                             android:layout_margin="2dp"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
                             android:drawablePadding="5dip"
                             android:layout_weight="1"
-                            android:drawableTop="@drawable/mypupil_icon"
-                            android:text="Invite to Other"/>
+                            android:textAllCaps="false"
+                            android:textStyle="normal"
+                            android:drawableTop="@drawable/iconinvi"
+                            android:text="Invite"/>
                         <Button
-                            style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
                             android:id="@+id/txtpdashstudentlist"
+                            android:textSize="18sp"
                             android:layout_marginTop="2dp"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
-                            android:background="#ffffff"
+                            android:background="@color/white"
+                            android:textColor="@color/colorAccent"
                             android:drawablePadding="5dip"
                             android:layout_weight="1"
-                            android:drawableTop="@drawable/myclass_icon"
+                            android:textAllCaps="false"
+                            android:textStyle="normal"
+                            android:drawableTop="@drawable/newmyclass"
                             android:text="Student List"/>
                         <Button
-                            style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
+                            android:id="@+id/txtpdashpupilinfo"
+                            android:textSize="18sp"
+                            android:layout_marginTop="2dp"
+                            android:layout_marginRight="2dp"
+                            android:layout_marginLeft="2dp"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginRight="2dp"
-                            android:id="@+id/txtpdashpupilinfo"
-                            android:background="#ffffff"
+                            android:background="@color/white"
+                            android:textColor="@color/colorAccent"
+                            android:drawablePadding="5dip"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:drawableTop="@drawable/mypupil_icon"
+                            android:textAllCaps="false"
+                            android:textStyle="normal"
+                            android:drawableTop="@drawable/newmypupilicon"
                             android:text="My Pupil"/>
 
-
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#d3d3d3"
                         android:orientation="horizontal">
-
                         <Button
-                            style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
                             android:id="@+id/txtpdashtrack"
-                            android:background="#ffffff"
+                            android:textSize="18sp"
                             android:layout_marginLeft="2dp"
                             android:layout_marginBottom="2dp"
                             android:layout_marginRight="2dp"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
-                            android:drawablePadding="5dip"
+                            android:background="@color/white"
+                            android:textColor="@color/colorAccent"
                             android:layout_weight="1"
-                            android:enabled="false"
-                            android:drawableTop="@drawable/tracking3d"
+                            android:textAllCaps="false"
+                            android:textStyle="normal"
+                            android:drawableTop="@drawable/newtracking"
                             android:text="Tracking"/>
                         <Button
-                            style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
-                            android:id="@+id/txtpdashhomework"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
+                            android:textSize="18sp"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
-                            android:background="#ffffff"
-                            android:drawablePadding="5dip"
+                            android:id="@+id/txtpdashhomework"
+                            android:background="@color/white"
+                            android:textColor="@color/colorAccent"
                             android:layout_weight="1"
-                            android:drawableTop="@drawable/homework_icon"
+                            android:gravity="center"
+                            android:textAllCaps="false"
+                            android:textStyle="normal"
+                            android:drawableTop="@drawable/newhomework"
                             android:text="Homework"/>
                         <Button
-                            style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
+                            android:textSize="18sp"
                             android:id="@+id/txtpdashclasswork"
                             android:paddingTop="5dp"
-                            android:drawablePadding="5dip"
                             android:paddingBottom="5dp"
                             android:layout_marginRight="2dp"
                             android:layout_marginLeft="2dp"
-                            android:background="#ffffff"
+                            android:background="@color/white"
+                            android:textColor="@color/colorAccent"
                             android:layout_weight="1"
-                            android:drawableTop="@drawable/classwork3d"
+                            android:textAllCaps="false"
+                            android:textStyle="normal"
+                            android:drawableTop="@drawable/newclasswork"
                             android:text="Classwork"/>
-
 
                     </LinearLayout>
                     <LinearLayout
@@ -216,47 +230,58 @@
                         android:layout_height="wrap_content"
                         android:background="#d3d3d3"
                         android:orientation="horizontal">
-                        <Button
-                            style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
-                            android:id="@+id/txtpdashtimetable"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginBottom="2dp"
-                            android:layout_marginRight="2dp"
-                            android:paddingTop="5dp"
-                            android:enabled="false"
-                            android:paddingBottom="5dp"
-                            android:background="#ffffff"
-                            android:layout_weight="1"
-                            android:drawableTop="@drawable/timetable_icon"
-                            android:text="TimeTable"/>
 
                         <Button
-                            style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
+                            android:textSize="18sp"
+                            android:id="@+id/txtpdashtimetable"
+                            android:layout_marginLeft="2dp"
+                            android:layout_marginRight="2dp"
+                            android:layout_marginBottom="2dp"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
+                            android:background="@color/white"
+                            android:textColor="#C0C0C0"
+                            android:layout_weight="1"
+                            android:enabled="false"
+                            android:textAllCaps="false"
+                            android:textStyle="normal"
+                            android:drawableTop="@drawable/newtimetable"
+                            android:text="TimeTable"/>
+
+
+                        <Button
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:textSize="18sp"
                             android:id="@+id/txtpdashcommunication"
-                            android:background="#ffffff"
+                            android:background="@color/white"
+                            android:textColor="@color/colorAccent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:drawableTop="@drawable/chat_icon"
-                            android:text="Communication"/>
+                            android:textAllCaps="false"
+                            android:textStyle="normal"
+                            android:drawableTop="@drawable/newquery"
+                            android:text="Chat"/>
                         <Button
-                            style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
                             android:id="@+id/txtpdashfuncenter"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
-                            android:layout_marginLeft="2dp"
+                            android:textSize="18sp"
                             android:layout_marginRight="2dp"
-                            android:enabled="false"
-                            android:background="#ffffff"
+                            android:layout_marginLeft="2dp"
+                            android:background="@color/white"
+                            android:textColor="#C0C0C0"
                             android:layout_weight="1"
-                            android:drawableTop="@drawable/funcenter_icon"
+                            android:enabled="false"
+                            android:textAllCaps="false"
+                            android:textStyle="normal"
+                            android:drawableTop="@drawable/newfuncenter"
                             android:text="FunCenter"/>
 
                     </LinearLayout>
@@ -269,49 +294,55 @@
 
                         <Button
                             style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
                             android:id="@+id/txtpdashalert"
                             android:drawablePadding="5dip"
-                            android:paddingTop="5dp"
-                            android:paddingBottom="5dp"
                             android:layout_marginLeft="2dp"
-                            android:layout_marginBottom="2dp"
                             android:layout_marginRight="2dp"
+                            android:layout_marginBottom="2dp"
+                            android:paddingTop="5dp"
+                            android:textSize="18sp"
+                            android:paddingBottom="5dp"
                             android:enabled="false"
-                            android:background="#ffffff"
+                            android:textColor="#C0C0C0"
+                            android:background="@color/white"
                             android:layout_weight="1"
-                            android:drawableTop="@drawable/annoucement_icon"
+                            android:drawableTop="@drawable/newalerts"
                             android:text="Alerts"/>
 
                         <Button
                             style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
                             android:enabled="false"
                             android:id="@+id/txtpdashviewstar"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
-                            android:background="#ffffff"
+                            android:background="@color/white"
+                            android:textColor="#C0C0C0"
                             android:drawablePadding="5dip"
+                            android:textSize="18sp"
                             android:layout_weight="1"
-                            android:drawableTop="@drawable/viewstar_icon"
+                            android:drawableTop="@drawable/newstar"
                             android:text="View Star"/>
 
                         <Button
                             style="@style/TextFont"
-                            android:layout_width="90dp"
-                            android:layout_height="150dp"
+                            android:layout_width="110dp"
+                            android:layout_height="140dp"
                             android:id="@+id/txtpdashpublicholiday"
                             android:paddingTop="5dp"
                             android:drawablePadding="5dip"
                             android:paddingBottom="5dp"
                             android:layout_marginRight="2dp"
                             android:layout_marginLeft="2dp"
-                            android:background="#ffffff"
+                            android:background="@color/white"
+                            android:textSize="18sp"
                             android:enabled="false"
                             android:layout_weight="1"
-                            android:drawableTop="@drawable/holiday_icon"
+                            android:textColor="#C0C0C0"
+                            android:drawableTop="@drawable/newholiday"
                             android:text="Holiday"/>
 
                     </LinearLayout>
