--- a/app/src/main/res/layout-large/parent_tracking_alert_dailog.xml
+++ b/app/src/main/res/layout-large/parent_tracking_alert_dailog.xml
@@ -20,15 +20,17 @@
             android:hint=" Enter Driver's Username"
             android:layout_marginTop="20dp"
             android:id="@+id/driverUsername"
-            android:layout_height="30dp"
+            android:layout_height="60dp"
             android:paddingLeft="10dp"
+            android:textSize="22sp"
             android:maxLength="30"/>
 
         <EditText style="@style/EditTextMultiline"
             android:hint=" Enter Driver's UserID"
             android:layout_marginTop="20dp"
             android:id="@+id/driverUserID"
-            android:layout_height="30dp"
+            android:layout_height="60dp"
+            android:textSize="22sp"
             android:paddingLeft="10dp"
             android:maxLength="30"/>
 
@@ -45,9 +47,10 @@
                 <Button
                     android:text="Show Map"
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
+                    android:layout_height="60dp"
                     android:id="@+id/ShowMap"
                     android:layout_weight="1"
+                    android:textSize="20sp"
                     android:layout_margin="10dp"
                     android:fontFamily="sans-serif-condensed"
                     android:layout_gravity="left|center_vertical"
@@ -56,8 +59,9 @@
 
                 <Button
                     android:text="Cancel"
-                    android:layout_height="40dp"
+                    android:layout_height="60dp"
                     android:id="@+id/Cancel"
+                    android:textSize="20sp"
                     android:layout_width="wrap_content"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
