--- a/app/src/main/res/layout-large/mypupil_layout.xml
+++ b/app/src/main/res/layout-large/mypupil_layout.xml
@@ -72,6 +72,7 @@
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:visibility="gone"
                         android:layout_marginBottom="10dp">
                         <TextView
                             android:layout_width="wrap_content"
